examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/succ_true.st
language core;

fn main(n : Nat) -> Bool {
    return succ(succ(true))
}

//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
